# discordinator

./: .gitmodules  Cargo.toml
downloader/: Cargo.toml
downloader/src/: context.rs  conversation.rs  main.rs
finetune/: .gitignore  .gitingore  pyproject.toml
finetune/finetune/: bot.py  chatbot.py  dataset.py  main.py  model.py  repl.py
