[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
discord = { path = "../discord-rs" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.43.0", features = ["macros"] }
